Fix get method